# DevOps-Agent-using-AgentCore-Strands-and-MCPs

./: .gitignore  APP_USAGE.md  CHANGES.md  FINAL_SETUP.sh  Makefile  QUICK_SETUP.md  README-production.md  README.md  README_production.md  SECURITY_ANALYSIS_REPORT.md  TESTING_RESULTS.md  aws_devops_agent.py  aws_devops_agent_v2.py  complete_pr_workflow.py  create_pr_mcp_only.py  create_real_pr.py  debug_mcp.py  dynamodb_vs_rds_cost_comparison.md  ec2_web_workload_cost_analysis.md  goal  goal.txt  install.sh  main.py  pyproject.toml  requirements-production.txt  requirements.txt  requirements_dev.txt  setup.sh  test-file.md  test_mcp_integration.py  test_strands_mcp.py  test_terraform_mcp.py
.github/: PULL_REQUEST_TEMPLATE.md
.history/: aws_devops_agent_20250827215313.py  aws_devops_agent_20250827215322.py  aws_devops_agent_20250827224600.py  aws_devops_agent_20250827224635.py  aws_devops_agent_20250828001440.py  aws_devops_agent_20250828001605.py  goal_20250827175505  requirements-production_20250827190443.txt  requirements-production_20250827191318.txt  requirements-production_20250827191322.txt  requirements-production_20250827214253.txt
.history/mcp_tools/: real_mcp_client_20250827214253.py
ai-processing/: main.tf  optimized_processor.py  outputs.tf  requirements.txt  variables.tf
ai-processing/tools/: data_processing_tools.py  destination_account_tools.py  dynamodb_tools.py  ec2_sizing_ai_tools.py  ec2_sizing_tools.py  s3_tools.py
bedrock_deployment/: aws_devops_agent_app.py
bkp/: aws_devops_agent.py  aws_devops_agent_minimal.py  demo_final.py  note.ipynb
deployment/bedrock/: .env.example  (+4 more)
docs/: AGENTCORE_DEPLOYMENT_GUIDE.md  APP_INFO.md  APP_USAGE.md  AWS_SECURITY_ANALYSIS.md  CDK_ANALYSIS.md  DEPLOYMENT_CHECKLIST.md  DOCUMENT_GENERATION.md  ENVIRONMENT_VARIABLES.md  GITHUB_MCP_INTEGRATION.md  GITHUB_MCP_QUICK_REFERENCE.md  QUICK_SETUP.md  SAFETY_GUIDELINES.md  TERRAFORM_ANALYSIS.md  USER_MANUAL.md
scripts/: pr-create.sh  setup.sh  setup_mcp_servers.py  test_github_connectivity.py  validate_env.py
src/: __init__.py
tests/: README.md  interactive_test.py  quick_test.py  test_aws_account_manager.py  test_aws_devops_agent.py  test_mcp_integration.py
(+88 files in other folders)
